<resources>
    <string name="app_name">PaxfulTestTask</string>
    <string name="first_fragment_name">Jokes List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="offline_mode">Offline mode</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="delete">Delete</string>
    <string name="character_lastname">Character lastname</string>
    <string name="character_firstname">Character firstname</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_120">/120</string>
    <string name="_0">0</string>
    <string name="add_new_joke">Add new joke</string>
    <string name="my_jokes_frag_title">My Jokes</string>
    <string name="settings_frag_title">Settings Fragment</string>
    <string name="jokes_list_frag_title">Jokes List</string>
    <string name="jokes_added_toast">Joke added to favorites</string>
</resources>