<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_top_margin"
        android:text="@string/add_new_joke"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialogEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogEditText"
        android:layout_width="@dimen/dial_edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/middle_layout_margin"
        android:layout_marginTop="@dimen/small_top_margin"
        android:backgroundTint="@color/purple_500"
        android:maxLength="120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <TextView
        android:id="@+id/currentSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/symbolsLimit"
        app:layout_constraintTop_toBottomOf="@id/dialogEditText" />

    <TextView
        android:id="@+id/symbolsLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120"
        app:layout_constraintEnd_toEndOf="@id/dialogEditText"
        app:layout_constraintTop_toBottomOf="@id/dialogEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_layout_margin"
        android:background="@null"
        android:text="@string/cancel"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbolsLimit" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/save"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/dialogEditText"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />


</androidx.constraintlayout.widget.ConstraintLayout>