<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/charFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_layout_margin"
        android:hint="@string/character_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/charLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/character_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charFirstName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_layout_margin"
        android:text="@string/offline_mode"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/switchOfflineMode"
        app:layout_constraintEnd_toStartOf="@+id/switchOfflineMode"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchOfflineMode"
        app:layout_constraintVertical_bias="0.551" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchOfflineMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_layout_margin"
        android:layout_marginTop="@dimen/middle_top_margin"
        android:layout_marginEnd="@dimen/big_end_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charLastName" />


</androidx.constraintlayout.widget.ConstraintLayout>